<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relative_layout_container"
            android:layout_width="match_parent"
            android:foreground="?selectableItemBackground"
            android:layout_height="48dp">

            <View
                android:id="@+id/encrypted_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_centerVertical="true"
                android:background="?attr/decrypted_file_drawable" />

            <TextView
                android:id="@+id/encrypted_file_title"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="17sp"
                android:layout_toEndOf="@+id/encrypted_icon"
                android:layout_toStartOf="@id/button"
                android:layout_marginStart="8dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <!--My dropdown Button -->
            <RelativeLayout
                android:id="@+id/button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_alignParentRight="true"
                android:gravity="center">

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentRight="false"
                    android:background="?attr/chevron_drawable" />
            </RelativeLayout>
        </RelativeLayout>
        <!--The layout below is my ExpandableLayout -->
        <LinearLayout
            android:id="@+id/expandableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/encrypted_file_subtitle1"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/encrypted_file_subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:id="@+id/coordinator_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/button_encrypt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:foreground="?selectableItemBackground"
                        android:background="@android:color/transparent"
                        android:text="@string/encrypt" />

                    <Button
                        android:id="@+id/button_open"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        card_view:layout_anchor="@id/button_encrypt"
                        card_view:layout_anchorGravity="left"
                        android:layout_gravity="left"
                        android:foreground="?selectableItemBackground"
                        android:background="@android:color/transparent"
                        android:text="@string/open" />

                    <Button
                        android:id="@+id/button_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        card_view:layout_anchor="@id/button_open"
                        card_view:layout_anchorGravity="left"
                        android:layout_gravity="left"
                        android:foreground="?selectableItemBackground"
                        android:background="@android:color/transparent"
                        android:text="@string/delete" />

                </androidx.coordinatorlayout.widget.CoordinatorLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>